allow theme and port specification :
> theme=black port=10000 docker-compose up -d

prez will listen on port 10000 and serve with the black template

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ version: "3.5"
 services:
   prez:
     image: prez:latest
-    command: /bin/bash /start.sh
+    command: /bin/bash /start.sh ${theme}
     ports: 
-      - 9000:9000
+      - ${port:-9000}:9000
     volumes:
       - ./:/opt/prez
       - ./start.sh:/start.sh
